force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/cdcpc__RD_Component_MB_Detail__c.object-meta.xml
<CustomObject>
    <label>RD ComponentMBDetail</label>
    <nameField>
        <label>RD ComponentMBDetail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD ComponentMBDetail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>