force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__ASME_Outlet_Option_Code__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ASME_Outlet_Option_Code__c</fullName>
    <label>ASME Outlet Option Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>