force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__MCAR__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCAR__c</fullName>
    <label>MCAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>