force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__MCDD__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCDD__c</fullName>
    <label>MCDD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>