force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__MCGD__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCGD__c</fullName>
    <label>MCGD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>