force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__MCHO__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCHO__c</fullName>
    <label>MCHO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>