force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__MCIG__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCIG__c</fullName>
    <label>MCIG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>