force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__MCIR1__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCIR1__c</fullName>
    <label>MCIR1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>