force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__MCOC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCOC__c</fullName>
    <label>MCOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>