force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__MCSS3__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCSS3__c</fullName>
    <label>MCSS3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>