force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__MCVS1__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCVS1__c</fullName>
    <label>MCVS1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>