force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__MCVS2__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCVS2__c</fullName>
    <label>MCVS2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>