force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__MCVS3__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCVS3__c</fullName>
    <label>MCVS3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>