force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__NumVal2__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__NumVal2__c</fullName>
    <label>NumVal2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>