force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/fields/cdcpc__Text5Val__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Text5Val__c</fullName>
    <label>Text5Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>