force-app/main/default/objects/cdcpc__RD_Component_MB_Detail__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Text1Val__c</columns>
    <columns>cdcpc__Text2Val__c</columns>
    <columns>cdcpc__Text3Val__c</columns>
    <columns>cdcpc__Text4Val__c</columns>
    <columns>cdcpc__Text5Val__c</columns>
    <columns>cdcpc__NumVal1__c</columns>
    <columns>cdcpc__NumVal2__c</columns>
    <columns>cdcpc__MCDT1__c</columns>
    <columns>cdcpc__MCDT2__c</columns>
    <columns>cdcpc__Type__c</columns>
    <columns>cdcpc__MCAR__c</columns>
    <columns>cdcpc__MCVS2__c</columns>
    <columns>cdcpc__MCVS3__c</columns>
    <columns>cdcpc__MCIG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__Text1Val__c</field>
        <operation>equals</operation>
        <value>STD</value>
    </filters>
    <filters>
        <field>cdcpc__Text2Val__c</field>
        <operation>equals</operation>
        <value>N</value>
    </filters>
    <filters>
        <field>cdcpc__Text3Val__c</field>
        <operation>equals</operation>
        <value>0300</value>
    </filters>
    <filters>
        <field>cdcpc__Text4Val__c</field>
        <operation>equals</operation>
        <value>LL</value>
    </filters>
    <label>All</label>
</ListView>